--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "hono": "^4.11.10",
     "lucide-react": "^0.575.0",
     "nanoid": "^5.1.6",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-markdown": "^10.1.0",
